# data-analysis-python

./: .gitignore  Example-Fit.ipynb  LICENSE-CODE  LICENSE-TEXT  README.md  Template-Fit.ipynb  environment.yml  pyproject.toml
matlab/: HH1.mlx  HH2.mlx  HH3.mlx  HH4.mlx  HH5.mlx  HH6.mlx
notebooks/: 0-Example-Fit.ipynb  0.0-Introduction-to-Python.ipynb  0.0-Introduction.ipynb  0.0-Python-Introduction.ipynb  0.1-Example-Fit.ipynb  0.1-Python-references.ipynb  0.2-Minimum-Deviation-Fit.ipynb  1.0-Random-numbers.ipynb  2.0-Basic-statistics.ipynb  2.0-Chapter 2.ipynb  2.1-Evaluating-the-Gaussian-integral.ipynb  3.0-Basic-probability.ipynb  3.0-Chapter 3.ipynb  4.0-Chapter 4.ipynb  4.0-Error-propagation.ipynb  5.0-Chapter 5.ipynb  5.0-Visualization-and-modeling.ipynb  5.1-Linear-fits.ipynb  6.0-Fitting-complex-functions.ipynb  7.0-The-error-matrix.ipynb  8.0-Hypothesis-testing.ipynb  8.1-The-t-distribution.ipynb  A.0-Reading-goals.ipynb  A.1-Example-Fit.ipynb  A.2-Minimum-Deviation-Fit.ipynb  A.3-Template-Fit.ipynb  Chapter 1.ipynb  Chapter 2.ipynb  Chapter 3.ipynb  Chapter 4.ipynb  Chapter 5.ipynb  Chapter 6-8.ipynb  Example-Fit.ipynb  P233HH5.ipynb  Plot-formatting.ipynb  Python exercise for Chapter 1.ipynb  Template-Fit.ipynb  mindevdatasim.csv  mindevfit.eps  minimum-deviation-fit.ipynb  (+2 more)
notebooks/aux/: Chapter 1 - graphs.ipynb  Python FAQs.ipynb  Python exercise for Chapter 1.ipynb  Python exercise for Chapter 2.ipynb  Simulate-data-for-5.0.ipynb  TestTable.txt  Unused-text.ipynb  Version-check.ipynb  fourier.ipynb  notebooks_0.1-Python-references.ipynb  simulate-minimum-deviation.ipynb
notebooks/data/: Example-Data.csv  atom_trap.csv  mindevdatasim.csv  pendulum.csv  rc_circuit.csv  resistance.csv  simulate-minimum-deviation.ipynb
notebooks/figures/: mindevfit.eps
notebooks/html/: Example-Fit.slides.html
